[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Aditya Badrinath <abadrinath15@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
